--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,16 @@ dependencies:
   go_router: ^14.2.0
   flutter_localizations:
     sdk: flutter
-  intl: ^0.20.2  
+  intl: ^0.20.2
+  http: ^1.2.1
+  google_maps_flutter: ^2.5.0
+  google_maps_flutter_web: ^0.5.0
+  geolocator: ^12.0.0
+  audioplayers: ^6.5.1
+  flutter_beep: ^1.0.0
+  sound_generator: ^0.0.14
+  
+  
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +33,4 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/sounds/whistle.wav
