--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   geolocator: ^12.0.0
   audioplayers: ^6.5.1
   sound_generator: ^0.0.14
+  url_launcher: ^6.3.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
@@ -31,3 +33,5 @@ flutter:
     - assets/icons/
     - assets/images/
     - assets/sounds/whistle.wav
+    - assets/data/shelters_sample.json
+    - assets/data/
