--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,24 +8,48 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  # UI & Core
   cupertino_icons: ^1.0.8
   go_router: ^14.2.0
   flutter_localizations:
     sdk: flutter
   intl: ^0.20.2
+
+  # Network & Utils
   http: ^1.2.1
+  url_launcher: ^6.3.0
+  shared_preferences: ^2.2.3
+  crypto: ^3.0.3
+
+  # Maps & Location
   google_maps_flutter: ^2.5.0
   google_maps_flutter_web: ^0.5.0
   geolocator: ^12.0.0
+
+  # Audio
   audioplayers: ^6.5.1
   sound_generator: ^0.0.14
-  url_launcher: ^6.3.0
-  shared_preferences: ^2.2.3
+
+  # Local DB (Offline-first)
+  drift: ^2.22.1
+  drift_flutter: ^0.2.3
+  path_provider: ^2.1.4
+  path: ^1.9.0
+
+  # 🔥 Firebase (Tanıdıklar + Durum Senkronizasyonu için)
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+
+  # Drift code generation
+  drift_dev: ^2.22.1
+  build_runner: ^2.4.11
 
 flutter:
   uses-material-design: true
