--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   google_maps_flutter: ^2.5.0
   google_maps_flutter_web: ^0.5.0
   geolocator: ^12.0.0
+  flutter_polyline_points: ^2.0.0
 
   # Audio
   audioplayers: ^6.5.1
